// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiStepNumber is rendered 1`] = `
<span
  aria-label="aria-label"
  class="ouiStepNumber testClass1 testClass2"
  data-test-subj="test subject string"
>
  <span
    class="ouiScreenReaderOnly"
  >
    Step 
  </span>
  <span
    aria-hidden="true"
    class="ouiStepNumber__number"
  />
</span>
`;

exports[`OuiStepNumber props has titleSize is rendered 1`] = `
<span
  class="ouiStepNumber"
>
  <span
    class="ouiScreenReaderOnly"
  >
    Step 1
  </span>
  <span
    aria-hidden="true"
    class="ouiStepNumber__number"
  >
    1
  </span>
</span>
`;

exports[`OuiStepNumber props isHollow is rendered 1`] = `
<span
  class="ouiStepNumber ouiStepNumber-isHollow"
>
  <span
    class="ouiScreenReaderOnly"
  >
    Step 1
  </span>
  <span
    aria-hidden="true"
    class="ouiStepNumber__number"
  >
    1
  </span>
</span>
`;

exports[`OuiStepNumber props status complete is rendered 1`] = `
<span
  class="ouiStepNumber ouiStepNumber--complete"
>
  <span
    aria-label="Step 1 is complete"
    class="ouiStepNumber__icon"
    data-ouiicon-type="check"
  />
</span>
`;

exports[`OuiStepNumber props status danger is rendered 1`] = `
<span
  class="ouiStepNumber ouiStepNumber--danger"
>
  <span
    aria-label="Step 1 has errors"
    class="ouiStepNumber__icon"
    data-ouiicon-type="cross"
  />
</span>
`;

exports[`OuiStepNumber props status disabled is rendered 1`] = `
<span
  class="ouiStepNumber ouiStepNumber--disabled"
>
  <span
    class="ouiScreenReaderOnly"
  >
    Step 1 is disabled
  </span>
  <span
    aria-hidden="true"
    class="ouiStepNumber__number"
  >
    1
  </span>
</span>
`;

exports[`OuiStepNumber props status incomplete is rendered 1`] = `
<span
  class="ouiStepNumber ouiStepNumber--incomplete"
>
  <span
    class="ouiScreenReaderOnly"
  >
    Step 1 is incomplete
  </span>
  <span
    aria-hidden="true"
    class="ouiStepNumber__number"
  >
    1
  </span>
</span>
`;

exports[`OuiStepNumber props status loading is rendered 1`] = `
<span
  class="ouiStepNumber ouiStepNumber--loading"
>
  <span
    class="ouiScreenReaderOnly"
  >
    Step 1 is loading
  </span>
  <span
    class="ouiLoadingSpinner ouiLoadingSpinner--xLarge ouiStepNumber__loader"
  />
</span>
`;

exports[`OuiStepNumber props status warning is rendered 1`] = `
<span
  class="ouiStepNumber ouiStepNumber--warning"
>
  <span
    aria-label="Step 1 has warnings"
    class="ouiStepNumber__icon"
    data-ouiicon-type="alert"
  />
</span>
`;
